--- a/Intro_to_Pytorch.ipynb
+++ b/Intro_to_Pytorch.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM8PzaeAau1GDNAQJq2GjOJ",
+      "authorship_tag": "ABX9TyNLsXI3xnKntY3l8AF9pLBo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "id": "38VJ7sLq4wua"
       },
@@ -644,6 +644,657 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "yDN1uVilEpeT"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Lists\n",
+        "\n",
+        "list = [[1,2,3,4],[2,4,6,8]]\n",
+        "list"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L4bPOYGCE6_A",
+        "outputId": "5e9b30fa-6d1b-4e3e-9ec6-ae825c284883"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[1, 2, 3, 4], [2, 4, 6, 8]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#numpy arrays\n",
+        "\n",
+        "np1 = np.random.rand(3,4)\n",
+        "np1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uxtPDvdTGZOp",
+        "outputId": "cbf569a9-9b12-4bee-ca05-8b64b666d60f"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.52469522, 0.04033926, 0.91955697, 0.95109395],\n",
+              "       [0.26488351, 0.570573  , 0.2696798 , 0.89048952],\n",
+              "       [0.162071  , 0.32425198, 0.11828311, 0.98494761]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np1.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ttLQiOLnGhD1",
+        "outputId": "2676d394-0869-4d25-ef65-56c510a239af"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('float64')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# tensors\n",
+        "\n",
+        "tensor_3d = torch.zeros(2,3,4)\n",
+        "tensor_3d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sEg91mtqIe1z",
+        "outputId": "4d9c02b7-52e3-40cc-9292-3eae310006d8"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]],\n",
+              "\n",
+              "        [[0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.],\n",
+              "         [0., 0., 0., 0.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_3d.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n7qnrMPoJcwS",
+        "outputId": "120d4609-e1b6-4537-bb9d-b5e9ef08a198"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.float32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#convert tensor out of numpy ( convert numpy array to tensor)\n",
+        "my_tensor = torch.tensor(np1)\n",
+        "my_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I0q0uuRCI-ld",
+        "outputId": "1ea7bea9-1c0c-4d57-eed9-a1eb79bebd90"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.5247, 0.0403, 0.9196, 0.9511],\n",
+              "        [0.2649, 0.5706, 0.2697, 0.8905],\n",
+              "        [0.1621, 0.3243, 0.1183, 0.9849]], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reshape and view\n",
+        "\n",
+        "tensor = torch.arange(10)\n",
+        "tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KE-QZf9zJa4k",
+        "outputId": "e9191173-c0d7-42f7-db0c-cace2451d6b8"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor = tensor.c(5,2)\n",
+        "tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eG0_rEtmNeD1",
+        "outputId": "e70091ad-cdb9-455b-9e87-8193aafc7507"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1],\n",
+              "        [2, 3],\n",
+              "        [4, 5],\n",
+              "        [6, 7],\n",
+              "        [8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#when we do not know the no of items we can use -1\n",
+        "\n",
+        "tensor1 = torch.arange(15)\n",
+        "\n",
+        "tensor1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5REEpahcNoIl",
+        "outputId": "232e15bc-6cda-4c9b-8fe3-270f892c7753"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor1 = tensor1.reshape(-1,3)\n",
+        "tensor1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Av84UrokSTkE",
+        "outputId": "9a83b4d3-eb52-4161-c155-9cca08d23f84"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0,  1,  2],\n",
+              "        [ 3,  4,  5],\n",
+              "        [ 6,  7,  8],\n",
+              "        [ 9, 10, 11],\n",
+              "        [12, 13, 14]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#use view\n",
+        "tensor2 = torch.arange(12)\n",
+        "tensor2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wlKBtzsYSlNI",
+        "outputId": "adaa6f64-2347-481f-f0e8-825207ef19c2"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# if we modify the original tensor it will effect to another related things\n",
+        "tensor3 = tensor2.view(3,4)\n",
+        "tensor3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0kq3EdBHVUsi",
+        "outputId": "673b611d-9421-429e-ff44-995ffe3c210d"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0,  1,  2,  3],\n",
+              "        [ 4,  5,  6,  7],\n",
+              "        [ 8,  9, 10, 11]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor2[1] = 5\n",
+        "tensor2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YpdgBmfeVxj9",
+        "outputId": "82639f81-cf28-4f52-a5dc-8bc4aebfc973"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 0,  5,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JZun3fyZWGm0",
+        "outputId": "2d190524-3ef3-42ea-bfb5-75516b7b3406"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[ 0,  5,  2,  3],\n",
+              "        [ 4,  5,  6,  7],\n",
+              "        [ 8,  9, 10, 11]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#slices\n",
+        "tensor4 = torch.arange(10)\n",
+        "tensor4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2luwddPWN5L",
+        "outputId": "6ea1a7b3-bbeb-41d7-951c-685041ba5491"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Grab a special item\n",
+        "tensor4[7]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5MSP1mp9YSu8",
+        "outputId": "aaeed6de-3419-4a93-ecc6-e3217801ec24"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(7)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Grab a slice\n",
+        "tensor5 = tensor4.reshape(5,2)\n",
+        "tensor5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XA9mck_hYeoi",
+        "outputId": "503d6a9a-6c8f-4074-cc3a-5c79c0289e8c"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 1],\n",
+              "        [2, 3],\n",
+              "        [4, 5],\n",
+              "        [6, 7],\n",
+              "        [8, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor5[:,1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z11qW-kRYy20",
+        "outputId": "90caf367-8f0a-468b-ccc8-8450e43d9d22"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 3, 5, 7, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#return as a column\n",
+        "\n",
+        "tensor5[:,1:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ibdWHBj6ZJGn",
+        "outputId": "4824f598-9171-4433-a8ca-84aebcc37505"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1],\n",
+              "        [3],\n",
+              "        [5],\n",
+              "        [7],\n",
+              "        [9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tensor_a = torch.tensor([1,2,3,4])\n",
+        "tensor_b = torch.tensor([5,6,7,8])\n",
+        "\n",
+        "tensor_a + tensor_b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XrtRX7vSaYDQ",
+        "outputId": "8925614c-9546-4554-c33d-3f3041670374"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 6,  8, 10, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#using math opeerations\n",
+        "\n",
+        "torch.add(tensor_a , tensor_b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wUXsDcDrazPB",
+        "outputId": "3b6128df-907c-497a-a112-a3a8f56f030a"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([ 6,  8, 10, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3YdYioT5a-0P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iYrCbSWda--i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HICd73nha_Fw"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
